Null-check the RenderView in ocument::windowScreenDidChange to fix a crash when saving PDFs https://bugs.webkit.org/show_bug.cgi?id=100141 <rdar://problem/12559147>

Reviewed by Tim Horton.

For PDF documents the RenderView is null, so null-check it to avoid a crash
when saving PDFs.

* dom/Document.cpp:
(WebCore::Document::windowScreenDidChange):

Canonical link: https://commits.webkit.org/118324@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132409 268f45cc-cd09-0410-ab3c-d52691b4dbfc